test/scc_test/stmt/semantic-errors/020.a
020.t:4:16: error: expression must have scalar type